# smg

./: PLAN.md
.github/workflows/: claude-code-review.yml  e2e-gpu-job.yml  nightly-bfcl.yml  nightly-mlx-bench.yml  pr-test-rust.yml
bindings/python/src/: lib.rs
bindings/python/src/smg/: router.py  router_args.py
bindings/python/tests/: test_router_config.py  test_startup_sequence.py  test_validation.py
crates/auth/: Cargo.toml
crates/grpc_client/: Cargo.toml
crates/grpc_client/proto/: sglang_scheduler.proto
crates/grpc_client/python/: pyproject.toml
crates/grpc_client/src/: sglang_scheduler.rs  tokenizer_bundle.rs  tokenspeed_scheduler.rs  vllm_engine.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: annotations.rs
crates/mcp/src/core/: handler.rs  orchestrator.rs  session.rs
crates/mcp/src/inventory/: index.rs  types.rs
crates/mesh/src/: gossip_controller.rs  gossip_service.rs  kv.rs
crates/mesh/src/crdt_kv/: crdt.rs  operation.rs  tests.rs
crates/mesh/src/crdt_kv/engine/: lww.rs  mod.rs  rate_limit.rs
crates/mesh/src/tests/: crdt_integration.rs
crates/mesh/src/transport/: sync_stream.rs
crates/protocols/src/: messages.rs  responses.rs  worker.rs
crates/protocols/src/builders/responses/: response.rs
crates/protocols/tests/: background_mode_protocol.rs
crates/reasoning_parser/src/: factory.rs  lib.rs
crates/reasoning_parser/src/parsers/: minimax_m3.rs  mistral.rs  mod.rs  step3p5.rs
crates/tool_parser/src/: factory.rs  lib.rs  traits.rs
crates/tool_parser/src/parsers/: helpers.rs  minimax_m2.rs  minimax_m3.rs  mod.rs  step3p5.rs
crates/tool_parser/tests/: tool_parser_minimax_m2.rs  tool_parser_minimax_m3.rs  tool_parser_step3p5.rs
crates/wasm/: Cargo.toml
docs/concepts/reliability/: graceful-shutdown.md
docs/getting-started/: kv-events-cache-aware.md
e2e_test/: conftest.py  pyproject.toml
e2e_test/chat_completions/: test_openai_server.py  test_structured_output.py  test_validation.py
e2e_test/fixtures/: __init__.py  hooks.py  setup_backend.py
e2e_test/infra/: __init__.py  model_specs.py  worker_pool.py
e2e_test/responses/: conftest.py  test_builtin_tools.py  test_image_generation.py  test_sampling_params.py  test_state_management.py  test_streaming_events.py  test_structured_output.py  test_tools_call.py
grpc_servicer/: pyproject.toml
grpc_servicer/smg_grpc_servicer/: kv_events.py
grpc_servicer/smg_grpc_servicer/mlx/: server.py
grpc_servicer/smg_grpc_servicer/sglang/: servicer.py
grpc_servicer/smg_grpc_servicer/tokenspeed/: kv_events.py  servicer.py
grpc_servicer/smg_grpc_servicer/vllm/: kv_events.py
grpc_servicer/tests/: conftest.py  test_tokenspeed_kv_events.py  test_tokenspeed_kv_events_stream.py
model_gateway/: Cargo.toml
model_gateway/benches/: wasm_middleware_latency.rs
model_gateway/src/: app_context.rs  health.rs  lib.rs  main.rs  server.rs
model_gateway/src/config/: builder.rs  types.rs  validation.rs
model_gateway/src/observability/: metrics.rs
model_gateway/src/policies/: cache_aware.rs  factory.rs  least_load.rs  mod.rs  power_of_two.rs  registry.rs
model_gateway/src/routers/common/openai_bridge/: format_registry.rs  tool_descriptors.rs
model_gateway/src/routers/grpc/: client.rs
model_gateway/src/routers/parse/: handlers.rs
model_gateway/src/worker/: monitor.rs
model_gateway/tests/: engine_metrics_test.rs  wasm_test.rs
model_gateway/tests/common/: mock_mcp_server.rs  mod.rs  test_app.rs
model_gateway/tests/routing/: cache_aware_backward_compat_test.rs  test_pd_routing.rs
model_gateway/tests/spec/: responses.rs
scripts/: ci_download_model.sh  ci_install_e2e_deps.sh  mlx_bench.sh  mlx_bench_aggregate.py
scripts/bfcl/: README.md  launch_arm.sh
(+11 files in other folders)
