[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smg-grpc-servicer"
version = "0.5.6"
description = "SMG gRPC servicer implementations for LLM inference engines (vLLM, MLX, TokenSpeed, SGLang)"
requires-python = ">=3.10"
dependencies = [
    "smg-grpc-proto>=0.4.10",
    "grpcio>=1.81.1",
    "grpcio-reflection>=1.81.1",
    "grpcio-health-checking>=1.81.1",
]
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    {name = "Chang Su", email = "mckvtl@gmail.com"},
    {name = "Simo Lin", email = "linsimo.mark@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
vllm = ["vllm>=0.19.0", "pyzmq>=25.0.0", "msgspec>=0.18.0"]
sglang = ["sglang>=0.5.10"]
# smg-grpc-proto>=0.4.7 is the first release that ships mlx_engine_pb2;
# without this floor, installing [mlx] against an older proto build would
# crash at import time when smg_grpc_servicer.mlx.server runs.
mlx = ["smg-grpc-proto>=0.4.7", "mlx>=0.22.0", "mlx-lm>=0.22.0"]
# TokenSpeed itself is installed from source (no PyPI release); these are the
# extra runtime deps the KV-event bridge needs on top of a TokenSpeed install.
tokenspeed = ["pyzmq>=25.0.0", "msgspec>=0.18.0"]

[project.urls]
Homepage = "https://github.com/lightseekorg/smg"
Repository = "https://github.com/lightseekorg/smg"

[tool.setuptools.packages.find]
where = ["."]
include = ["smg_grpc_servicer*"]
