[package]
name = "smg-mcp"
version = "2.3.1"
edition = "2021"
description = "Model Context Protocol (MCP) client implementation"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["mcp", "smg", "llm", "tools"]
categories = ["api-bindings"]

[lib]
name = "smg_mcp"

[dependencies]
async-trait.workspace = true
axum.workspace = true
backoff = { version = "0.4", features = ["tokio", "futures"] }
futures.workspace = true
dashmap.workspace = true
lru.workspace = true
parking_lot.workspace = true
# rmcp 1.7 requires reqwest 0.13 (its `StreamableHttpClient` impl is on
# reqwest 0.13's `Client`); pin here rather than via the workspace 0.12.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing.workspace = true
url = "2.5"
# rmcp 1.7 dropped the standalone SSE client transport
# (`transport-sse-client-reqwest`); the MCP spec superseded HTTP+SSE with
# Streamable HTTP, which is still here.
rmcp = { version = "1.7", features = ["client", "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "reqwest",
    "auth"] }
chrono = { workspace = true, features = ["serde"] }
regex = "1.12"
uuid = { workspace = true }
tokio-util = { workspace = true }
scopeguard = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test = "3.0"

[lints]
workspace = true
